--- a/unit-test/action.yml
+++ b/unit-test/action.yml
@@ -148,7 +148,7 @@ runs:
                       },
                       {
                         "type": "mrkdwn",
-                        "text": "<${{ github.server_url }}/${{ github.repository }})|${{ github.repository }}>"
+                        "text": "<${{ github.server_url }}/${{ github.repository }}|${{ github.repository }}>"
                       },
                       {
                         "type": "mrkdwn",
@@ -168,7 +168,7 @@ runs:
                       },
                       {
                         "type": "mrkdwn",
-                        "text": "<${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }})|${{ github.sha }}>"
+                        "text": "<${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }}|${{ github.sha }}>"
                       }
                     ]
                   }
