--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -383,12 +383,12 @@ jobs:
           user_name: jenkins
           api_token: ${{ secrets.jenkins_api_token }}
           job_name: API-E2E
-          parameter: |
+          parameter: >-
             {
               "BRANCH": "main",
               "ENVIRONMENT": "sit",
               "INCLUDE_TAG": "-i SIT",
-              "EXCLUDE_TAG": "",
+              "EXCLUDE_TAG": ""
             }
           wait: "true"
           timeout: "1000"
