--- a/deploy-app/action.yml
+++ b/deploy-app/action.yml
@@ -146,7 +146,7 @@ runs:
                       },
                       {
                         "type": "mrkdwn",
-                        "text": "<${{ github.server_url }}/${{ github.repository }})|${{ github.repository }}>"
+                        "text": "<${{ github.server_url }}/${{ github.repository }}|${{ github.repository }}>"
                       },
                       {
                         "type": "mrkdwn",
@@ -166,7 +166,7 @@ runs:
                       },
                       {
                         "type": "mrkdwn",
-                        "text": "<${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }})|${{ github.sha }}>"
+                        "text": "<${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }}|${{ github.sha }}>"
                       }
                     ]
                   }
