--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -392,5 +392,5 @@ jobs:
             }
           wait: "true"
           timeout: "1000"
-          slack_channel: ${{ inputs.slack_channel }}
-          slack_webhook: ${{ secrets.slack_webhook }}
+          slack_channel: jenkins
+          slack_webhook: ${{ secrets.SLACK_WEBHOOK_JENKINS }}
