--- a/docker-build-push/action.yml
+++ b/docker-build-push/action.yml
@@ -54,7 +54,7 @@ runs:
       shell: bash
       run: echo "::add-mask::${{ inputs.token }}"
     - name: Build & push docker images
-      uses: kkp-dfs/dime-github-actions-workflows/kaniko@jenkins-action
+      uses: kkp-dfs/dime-github-actions-workflows/kaniko@main
       with:
         image: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
