--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -372,18 +372,20 @@ jobs:
     name: Run E2E test
     needs:
       - deploy_pr
+      - deploy
+      - db_migration
     runs-on: [self-hosted, linux, deployment, main]
     if: ${{ inputs.code_lang == 'golang' }}
     continue-on-error: true
     steps:
       - name: Trigger jenkins job
-        uses: kkp-dfs/dime-github-actions-workflows/jenkins-trigger@main
+        uses: joshlk/jenkins-githubaction@master
         with:
           url: http://jenkins.qa.svc.cluster.local:8080
-          user_name: jenkins
+          username: jenkins
           api_token: ${{ secrets.jenkins_api_token }}
           job_name: API-E2E
-          parameter: >-
+          parameters: >-
             {
               "TRIGGER": "<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|${{ github.repository }}@${{ github.ref_name }}>",
               "BRANCH": "main",
