Add Jenkins action (#63)
* add e2e testing

* ignore result of e2e test job

* add parameter to action

* change url of jenkins

* enable cache build

* create jenkins-trigger action

* test docker build cache

* fix e2e action

* fix checking wait

* received jenkins api token from secret input

* fix encode basic authentication of jenkins api

* use jabbukka/jenkins-trigger action for trigger jenkins

* user of jenkins

* pass action inputs to jabbukka/jenkins-trigger action

* jenkins job action and add notification

* fix jenkins parameters

* fix jenkins notification message

* change notification message and slack channel

* remove slack notification from jenkins action

* add trigger parameter for e2e job test

* change branch of some action to main

* remove customize action for jenkins trigger

* fix run e2e job

--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -109,6 +109,8 @@ on:
         required: true
       slack_webhook:
         required: true
+      jenkins_api_token:
+        required: true
 
 env:
   GOPRIVATE: github.com/kkp-dfs/*
@@ -364,4 +366,32 @@ jobs:
           directory: ${{ inputs.migrate_dir }}
           schema: ${{ inputs.migrate_schema }}
           helm_ref: ${{ inputs.helm_ref }}
-          gh_access_token: ${{ secrets.GH_ACCESS_TOKEN }}
+          gh_access_token: ${{ secrets.gh_access_token }}
+
+  e2e-test:
+    name: Run E2E test
+    needs:
+      - deploy_pr
+      - deploy
+      - db_migration
+    runs-on: [self-hosted, linux, deployment, main]
+    if: ${{ always() && inputs.code_lang == 'golang' }}
+    continue-on-error: true
+    steps:
+      - name: Trigger jenkins job
+        uses: joshlk/jenkins-githubaction@master
+        with:
+          url: http://jenkins.qa.svc.cluster.local:8080
+          username: jenkins
+          api_token: ${{ secrets.jenkins_api_token }}
+          job_name: API-E2E
+          parameters: >-
+            {
+              "TRIGGER": "<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|${{ github.repository }}@${{ github.ref_name }}>",
+              "BRANCH": "main",
+              "ENVIRONMENT": "sit",
+              "INCLUDE_TAG": "-i SIT",
+              "EXCLUDE_TAG": ""
+            }
+          wait: "true"
+          timeout: "1000"
