--- a/unit-test/action.yml
+++ b/unit-test/action.yml
@@ -154,7 +154,7 @@ runs:
                       },
                       {
                         "type": "mrkdwn",
-                        "text": "<${{ github.server_url }}/${{ github.repository }})|${{ github.repository }}>"
+                        "text": "<${{ github.server_url }}/${{ github.repository }}|${{ github.repository }}>"
                       },
                       {
                         "type": "mrkdwn",
@@ -174,7 +174,7 @@ runs:
                       },
                       {
                         "type": "mrkdwn",
-                        "text": "<${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }})|${{ github.sha }}>"
+                        "text": "<${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }}|${{ github.sha }}>"
                       }
                     ]
                   }
