--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -36,8 +36,13 @@ on:
 jobs:
   prepare:
     name: Preparation
-    runs-on: [self-hosted, linux, main]
+    runs-on: [self-hosted, linux, deployment, main]
     steps:
+      - uses: kkp-dfs/dime-github-actions-workflows/checkout@main
+        with:
+          repository: ${{ inputs.repository }}
+          base_ref: ${{ inputs.base_ref }}
+          target_ref: ${{ inputs.target_ref }}
       - name: Generate environment secret file
         run: |
           JWT=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
@@ -64,6 +69,7 @@ jobs:
   analyze:
     name: Run analyze
     runs-on: [self-hosted, flutter-action-runner]
+    needs: [prepare]
     continue-on-error: true
     steps:
       - name: Setup flutter
@@ -92,6 +98,7 @@ jobs:
   unit-test:
     name: Run unit testing
     runs-on: [self-hosted, flutter-action-runner]
+    needs: [prepare]
     steps:
       - name: Setup flutter
         uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
@@ -141,11 +148,22 @@ jobs:
   integration-test:
     name: Run integration test
     runs-on: [self-hosted, macos]
+    needs: [prepare]
     strategy:
       matrix:
         platform: [android, iso]
     continue-on-error: true
     steps:
+      - name: Setup flutter
+        uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
+        with:
+          language: flutter
+          repository: ${{ inputs.repository }}
+          base_ref: ${{ inputs.base_ref }}
+          target_ref: ${{ inputs.target_ref }}
+          go_version: ${{ inputs.go-version }}
+          node_version: ${{ inputs.node-version }}
+          gh_access_token: ${{ secrets.gh_access_token }}
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
@@ -160,6 +178,7 @@ jobs:
       - name: Run test
         uses: kkp-dfs/dime-github-actions-workflows/integration-test@flutter-integration-test
         with:
+          language: flutter
           environment: sit
           device: ${{ steps.device.id }}
           slack_channel: ${{ inputs.slack_channel }}
@@ -168,6 +187,7 @@ jobs:
 
   mobsfscan:
     runs-on: ubuntu-latest
+    needs: [prepare]
     continue-on-error: true
     steps:
       - uses: actions/checkout@v2
