--- a/integration-test/action.yml
+++ b/integration-test/action.yml
@@ -81,10 +81,10 @@ runs:
         echo "::set-output name=db_user::${DB_USER:0:32}"
         echo "::set-output name=db_pass::${DB_PASS}"
 
-        mysql --host=${DB_HOST} --port=${DB_PORT} -u $DB_ADMIN_USER -p${DB_ADMIN_PASS} -e "CREATE DATABASE IF NOT EXISTS ${DB_NAME//-/_} CHARACTER SET utf8mb4 COLLATE utf8mb4_bin;"
-        mysql --host=${DB_HOST} --port=${DB_PORT} -u $DB_ADMIN_USER -p${DB_ADMIN_PASS} -e "CREATE USER IF NOT EXISTS '${DB_USER:0:32}'@'%' IDENTIFIED BY '${DB_PASS}';"
-        mysql --host=${DB_HOST} --port=${DB_PORT} -u $DB_ADMIN_USER -p${DB_ADMIN_PASS} -e "GRANT ALL PRIVILEGES ON ${DB_NAME//-/_}.* TO '${DB_USER:0:32}'@'%'; FLUSH PRIVILEGES;"
         if [ "${{ inputs.migration }}" == "true" ]; then
+          mysql --host=${DB_HOST} --port=${DB_PORT} -u $DB_ADMIN_USER -p${DB_ADMIN_PASS} -e "CREATE DATABASE IF NOT EXISTS ${DB_NAME//-/_} CHARACTER SET utf8mb4 COLLATE utf8mb4_bin;"
+          mysql --host=${DB_HOST} --port=${DB_PORT} -u $DB_ADMIN_USER -p${DB_ADMIN_PASS} -e "CREATE USER IF NOT EXISTS '${DB_USER:0:32}'@'%' IDENTIFIED BY '${DB_PASS}';"
+          mysql --host=${DB_HOST} --port=${DB_PORT} -u $DB_ADMIN_USER -p${DB_ADMIN_PASS} -e "GRANT ALL PRIVILEGES ON ${DB_NAME//-/_}.* TO '${DB_USER:0:32}'@'%'; FLUSH PRIVILEGES;"
           cd ../
           dbmate --wait -d ${{ inputs.migrate_dir }} -s ${{ inputs.migrate_schema }} -u mysql://${DB_ADMIN_USER}:${DB_ADMIN_PASS}@${DB_HOST}/${DB_NAME//-/_} up
         fi
@@ -256,10 +256,13 @@ runs:
         DB_ADMIN_PASS=$(echo ${{ steps.setup.outputs.db_admin_pass }} | base64 -d)
         DB_NAME=${{ steps.setup.outputs.db_name }}
         DB_USER=${{ steps.setup.outputs.db_user }}
-        mysql --host=${DB_HOST} --port=${DB_PORT} -u ${DB_ADMIN_USER} -p${DB_ADMIN_PASS} -e "REVOKE ALL PRIVILEGES, GRANT OPTION FROM '${DB_USER}'@'%';"
-        mysql --host=${DB_HOST} --port=${DB_PORT} -u ${DB_ADMIN_USER} -p${DB_ADMIN_PASS} -e "DROP USER '${DB_USER}'@'%';"
-        mysql --host=${DB_HOST} --port=${DB_PORT} -u ${DB_ADMIN_USER} -p${DB_ADMIN_PASS} -e "DROP DATABASE ${DB_NAME};"
 
+        if [ "${{ inputs.migration }}" == "true" ]; then
+          mysql --host=${DB_HOST} --port=${DB_PORT} -u ${DB_ADMIN_USER} -p${DB_ADMIN_PASS} -e "REVOKE ALL PRIVILEGES, GRANT OPTION FROM '${DB_USER}'@'%';"
+          mysql --host=${DB_HOST} --port=${DB_PORT} -u ${DB_ADMIN_USER} -p${DB_ADMIN_PASS} -e "DROP USER '${DB_USER}'@'%';"
+          mysql --host=${DB_HOST} --port=${DB_PORT} -u ${DB_ADMIN_USER} -p${DB_ADMIN_PASS} -e "DROP DATABASE ${DB_NAME};"
+        fi
+        
         RMQ_HOST=${{ steps.setup.outputs.rmq_host }}
         RMQ_VHOST=${{ steps.setup.outputs.rmq_vhost }}
         RMQ_USER=${{ steps.setup.outputs.rmq_user }}
