no run ios integration testing

--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -167,7 +167,7 @@ jobs:
     needs: [prepare]
     strategy:
       matrix:
-        platform: [android, ios]
+        platform: [android]
     continue-on-error: true
     steps:
       - name: Setup flutter
