move flutter integration test to new workflow

--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -34,16 +34,22 @@ on:
         required: true
 
 jobs:
-  prepare:
-    name: Preparation
-    runs-on: [self-hosted, linux, deployment, main]
+  analyze:
+    name: Run analyze
+    runs-on: [self-hosted, flutter-action-runner]
+    continue-on-error: true
     steps:
-      - uses: kkp-dfs/dime-github-actions-workflows/checkout@main
+      - name: Setup flutter
+        uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
         with:
+          language: flutter
           repository: ${{ inputs.repository }}
           base_ref: ${{ inputs.base_ref }}
           target_ref: ${{ inputs.target_ref }}
-      - name: Generate secret files
+          go_version: ${{ inputs.go-version }}
+          node_version: ${{ inputs.node-version }}
+          gh_access_token: ${{ secrets.gh_access_token }}
+      - name: Generate environment secret file
         run: |
           JWT=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
           echo "{\"role\":\"kubernetes-actions-runner\",\"jwt\":\"$JWT\"}" > payload.json
@@ -61,49 +67,7 @@ jobs:
           curl -L https://github.com/a8m/envsubst/releases/download/v1.2.0/envsubst-`uname -s`-`uname -m` -o envsubst
           chmod +x envsubst
           ./envsubst < environment_secret_template.yaml > environment_secret_sit.yaml
-      - name: Create key properties
-        run: |
-          JWT=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
-          echo "{\"role\":\"kubernetes-actions-runner\",\"jwt\":\"$JWT\"}" > payload.json
-          TOKEN=$(curl -d @payload.json https://vault.mydime.tech/v1/auth/kubernetes/actions-runner/dime-main/login | jq -r '.auth.client_token')
-          DATA=$(curl -H "X-VAULT-TOKEN:$TOKEN" https:/vault.mydime.tech/v1/infrastructure/data/mac-mini-01)
-          export KEYSTORE_PASSWORD=$(echo $DATA | jq -r ".data.data.android_release_keystore_password")
-          cat <<EOF > key.properties
-          keyAlias=release
-          keyPassword=${KEYSTORE_PASSWORD}
-          storeFile=/Users/dime/.android/release.keystore
-          storePassword=${KEYSTORE_PASSWORD}
-          EOF
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: dime-app-artifact
-          path: |
-            environment_secret_sit.yaml
-            key.properties
-          retention-days: 1
-  analyze:
-    name: Run analyze
-    runs-on: [self-hosted, flutter-action-runner]
-    needs: [prepare]
-    continue-on-error: true
-    steps:
-      - name: Setup flutter
-        uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
-        with:
-          language: flutter
-          repository: ${{ inputs.repository }}
-          base_ref: ${{ inputs.base_ref }}
-          target_ref: ${{ inputs.target_ref }}
-          go_version: ${{ inputs.go-version }}
-          node_version: ${{ inputs.node-version }}
-          gh_access_token: ${{ secrets.gh_access_token }}
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: dime-app-artifact
-      - name: Generate config and secret
-        run: make gen-config-sit
+          make gen-config-sit
       - uses: kkp-dfs/dime-github-actions-workflows/lint@main
         with:
           language: flutter
@@ -114,7 +78,6 @@ jobs:
   unit-test:
     name: Run unit testing
     runs-on: [self-hosted, flutter-action-runner]
-    needs: [prepare]
     steps:
       - name: Setup flutter
         uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
@@ -126,12 +89,6 @@ jobs:
           go_version: ${{ inputs.go-version }}
           node_version: ${{ inputs.node-version }}
           gh_access_token: ${{ secrets.gh_access_token }}
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: dime-app-artifact
-      - name: Generate config and secret
-        run: make gen-config-sit
       - name: Generate environment secret file
         run: |
           JWT=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
@@ -161,58 +118,8 @@ jobs:
           slack_webhook: ${{ secrets.slack_webhook }}
           coverage_file: coverage/lcov.info
 
-  integration-test:
-    name: Run integration test
-    runs-on: [self-hosted, macos]
-    needs: [prepare]
-    strategy:
-      matrix:
-        platform: [android]
-    continue-on-error: true
-    steps:
-      - name: Setup flutter
-        uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
-        with:
-          language: flutter
-          repository: ${{ inputs.repository }}
-          base_ref: ${{ inputs.base_ref }}
-          target_ref: ${{ inputs.target_ref }}
-          go_version: ${{ inputs.go-version }}
-          node_version: ${{ inputs.node-version }}
-          gh_access_token: ${{ secrets.gh_access_token }}
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: dime-app-artifact
-      - name: Generate config and secret
-        run: make gen-config-sit
-      - name: Get flutter device
-        id: device
-        run: |
-          DEVICE_ID=$(flutter devices | grep ${{ matrix.platform }} | awk -F• '{ print $2 }' | sed -e 's/ //g')
-          echo "::set-output name=id::$DEVICE_ID"
-      - name: Prepare essential files for each of platform
-        run: |
-          mv key.properties ./android/
-          cp /Users/dime/dime_app_release_files/google-services-sit.json ./android/app/google-services.json
-          cp /Users/dime/dime_app_release_files/service_credentials_sit.json ./android/app/src/sit/service_credentials.json
-          cp /Users/dime/dime_app_release_files/debug-key.jks ./android/app/debug-key.jks
-          cp /Users/dime/dime_app_release_files/GoogleService-Info-sit.plist ./ios/
-          cp /Users/dime/dime_app_release_files/GoogleService-Info-sit.plist ./ios/GoogleService-Info.plist
-          cp /Users/dime/dime_app_release_files/service_credentials_sit.json ./ios/service_credentials.json
-      - name: Run test
-        uses: kkp-dfs/dime-github-actions-workflows/integration-test@flutter-integration-test
-        with:
-          language: flutter
-          environment: sit
-          device: ${{ steps.device.outputs.id }}
-          slack_channel: ${{ inputs.slack_channel }}
-          slack_webhook: ${{ secrets.slack_webhook }}
-          gh_access_token: ${{ secrets.gh_access_token }}
-
   mobsfscan:
     runs-on: ubuntu-latest
-    needs: [prepare]
     continue-on-error: true
     steps:
       - uses: actions/checkout@v2
