--- a/integration-test/action.yml
+++ b/integration-test/action.yml
@@ -90,7 +90,7 @@ runs:
         fi
 
         RMQ=$(curl -H "X-Vault-Token:$TOKEN" https://vault.mydime.tech/v1/secrets/data/rabbitmq/sit)
-        RMQ_HOST=k8s-rabbitmq-rmqserve-74cb1dc39b-c9c3c8b01ed8ac4a.elb.ap-southeast-1.amazonaws.com
+        RMQ_HOST=rabbitmq.sit.mydime.tech
         RMQ_PORT=5672
         RMQ_ADMIN_USER=$(echo $RMQ | jq -r '.data.data.admin_username')
         RMQ_ADMIN_PASS=$(echo $RMQ | jq -r '.data.data.admin_password')
@@ -110,7 +110,7 @@ runs:
         curl -X PUT -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" -d "{\"configure\":\".*\",\"write\":\".*\",\"read\":\".*\"}" http://${RMQ_HOST}:15672/api/permissions/${RMQ_VHOST}/${RMQ_USER}
 
         REDIS=$(curl -H "X-Vault-Token:$TOKEN" https://vault.mydime.tech/v1/secrets/data/redis/sit)
-        REDIS_HOST=redis-master.shared.svc.cluster.local
+        REDIS_HOST=redis.sit.mydime.tech
         REDIS_PORT=6379
         REDIS_ADMIN_PASS=$(echo $REDIS | jq -r '.data.data.admin_password')
         echo "::set-output name=redis_host::${REDIS_HOST}"
