--- a/integration-test/action.yml
+++ b/integration-test/action.yml
@@ -105,7 +105,7 @@ runs:
         echo "::set-output name=rmq_user::${RMQ_USER}"
         echo "::set-output name=rmq_pass::${RMQ_PASS}"
 
-        curl -X PUT -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" http://${RMQ_HOST}:15672/api/vhosts/${RMQ_VHOST}
+        curl -X PUT -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" http://${RMQ_HOST}/api/vhosts/${RMQ_VHOST}
         curl -X PUT -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" -d "{\"password\":\"${RMQ_PASS}\",\"tags\":\"management\"}" http://${RMQ_HOST}/api/users/${RMQ_USER}
         curl -X PUT -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" -d "{\"configure\":\".*\",\"write\":\".*\",\"read\":\".*\"}" http://${RMQ_HOST}/api/permissions/${RMQ_VHOST}/${RMQ_USER}
 
