--- a/integration-test/action.yml
+++ b/integration-test/action.yml
@@ -90,7 +90,7 @@ runs:
         fi
 
         RMQ=$(curl -H "X-Vault-Token:$TOKEN" https://vault.mydime.tech/v1/secrets/data/rabbitmq/sit)
-        RMQ_HOST=rabbitmq.sit.mydime.tech
+        RMQ_HOST=rmq-server-rabbitmq.rabbitmq.svc.cluster.local
         RMQ_PORT=5672
         RMQ_ADMIN_USER=$(echo $RMQ | jq -r '.data.data.admin_username')
         RMQ_ADMIN_PASS=$(echo $RMQ | jq -r '.data.data.admin_password')
@@ -105,12 +105,12 @@ runs:
         echo "::set-output name=rmq_user::${RMQ_USER}"
         echo "::set-output name=rmq_pass::${RMQ_PASS}"
 
-        curl -X PUT -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" http://${RMQ_HOST}/api/vhosts/${RMQ_VHOST}
-        curl -X PUT -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" -d "{\"password\":\"${RMQ_PASS}\",\"tags\":\"management\"}" http://${RMQ_HOST}/api/users/${RMQ_USER}
-        curl -X PUT -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" -d "{\"configure\":\".*\",\"write\":\".*\",\"read\":\".*\"}" http://${RMQ_HOST}/api/permissions/${RMQ_VHOST}/${RMQ_USER}
+        curl -X PUT -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" http://${RMQ_HOST}:15672/api/vhosts/${RMQ_VHOST}
+        curl -X PUT -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" -d "{\"password\":\"${RMQ_PASS}\",\"tags\":\"management\"}" http://${RMQ_HOST}:15672/api/users/${RMQ_USER}
+        curl -X PUT -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" -d "{\"configure\":\".*\",\"write\":\".*\",\"read\":\".*\"}" http://${RMQ_HOST}:15672/api/permissions/${RMQ_VHOST}/${RMQ_USER}
 
         REDIS=$(curl -H "X-Vault-Token:$TOKEN" https://vault.mydime.tech/v1/secrets/data/redis/sit)
-        REDIS_HOST=redis.sit.mydime.tech
+        REDIS_HOST=redis-master.shared.svc.cluster.local
         REDIS_PORT=6379
         REDIS_ADMIN_PASS=$(echo $REDIS | jq -r '.data.data.admin_password')
         echo "::set-output name=redis_host::${REDIS_HOST}"
@@ -268,6 +268,6 @@ runs:
         RMQ_USER=${{ steps.setup.outputs.rmq_user }}
         RMQ_ADMIN_USER=$(echo ${{ steps.setup.outputs.rmq_admin_user }} | base64 -d)
         RMQ_ADMIN_PASS=$(echo ${{ steps.setup.outputs.rmq_admin_pass }} | base64 -d)
-        curl -X DELETE -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" http://${RMQ_HOST}/api/permissions/${RMQ_VHOST}/${RMQ_USER}
-        curl -X DELETE -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" http://${RMQ_HOST}/api/users/${RMQ_USER}
-        curl -X DELETE -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" http://${RMQ_HOST}/api/vhosts/${RMQ_VHOST}
+        curl -X DELETE -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" http://${RMQ_HOST}:15672/api/permissions/${RMQ_VHOST}/${RMQ_USER}
+        curl -X DELETE -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" http://${RMQ_HOST}:15672/api/users/${RMQ_USER}
+        curl -X DELETE -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" http://${RMQ_HOST}:15672/api/vhosts/${RMQ_VHOST}
