debug inputs repository

--- a/docker-build-push/action.yml
+++ b/docker-build-push/action.yml
@@ -36,10 +36,11 @@ runs:
     - uses: kkp-dfs/dime-github-actions-workflows/common@main
       with:
         gh_access_token: ${{ inputs.gh_access_token }}
-
+    - shell: bash
+      run: echo ${{ inputs.image || inputs.repository }}
     - name: Set docker metadata
       id: meta
-      uses: docker/metadata-action@v4
+      uses: docker/metadata-action@v3
       with:
         images: ${{ inputs.image || inputs.repository }}
         tags: |
