--- a/docker-build-push/action.yml
+++ b/docker-build-push/action.yml
@@ -37,7 +37,7 @@ runs:
       with:
         gh_access_token: ${{ inputs.gh_access_token }}
     - shell: bash
-      run: echo ${{ inputs.image || inputs.repository }}
+      run: echo ${{ inputs.repository }}
     - name: Set docker metadata
       id: meta
       uses: docker/metadata-action@v3
