--- a/unit-test/action.yml
+++ b/unit-test/action.yml
@@ -43,14 +43,14 @@ runs:
       shell: bash
       run: yarn test
 
-    - name: Cache flutter package
-      if: ${{ inputs.language == 'flutter' }}
-      uses: actions/cache@v2
-      with:
-        path: |
-          /opt/flutter/.pub-cache
-          /runner/.pub-cache
-        key: ${{ runner.os }}-${{ inputs.language }}-${{ inputs.repository }}-${{ hashFiles('**/pubspec.lock') }}
+    # - name: Cache flutter package
+    #   if: ${{ inputs.language == 'flutter' }}
+    #   uses: actions/cache@v2
+    #   with:
+    #     path: |
+    #       /opt/flutter/.pub-cache
+    #       /runner/.pub-cache
+    #     key: ${{ runner.os }}-${{ inputs.language }}-${{ inputs.repository }}-${{ hashFiles('**/pubspec.lock') }}
     - name: Run flutter unit test
       if: ${{ inputs.language == 'flutter' }}
       shell: bash
