--- a/integration-test/action.yml
+++ b/integration-test/action.yml
@@ -121,7 +121,7 @@ runs:
         echo "::set-output name=redis_pass::${REDIS_ADMIN_PASS}"
     - name: Create folder in testing bucket
       id: s3
-      uses: kkp-dfs/dime-github-actions-workflows/bucket@add-integration-bucket
+      uses: kkp-dfs/dime-github-actions-workflows/bucket@main
       with:
         bucket: dime-integration-test-sit
         folder: ${{ inputs.application_name }}-${{ github.job }}
@@ -284,7 +284,7 @@ runs:
         curl -X DELETE -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" http://${RMQ_HOST}:15672/api/vhosts/${RMQ_VHOST}
     - name: Remove folder in testing bucket
       if: ${{ always() && inputs.language == 'golang' }}
-      uses: kkp-dfs/dime-github-actions-workflows/bucket@add-integration-bucket
+      uses: kkp-dfs/dime-github-actions-workflows/bucket@main
       with:
         bucket: dime-integration-test-sit
         folder: ${{ inputs.application_name }}-${{ github.job }}
